--- a/Libs/CMakeLists.txt
+++ b/Libs/CMakeLists.txt
@@ -146,4 +146,11 @@ target_link_libraries(USB PUBLIC
 add_library(result INTERFACE)
 target_include_directories(result INTERFACE result)
 
+###################
+# nanopb
+###################
+
+add_subdirectory(nanopb)
+
+
 SET(LIBS_DIR            ${CMAKE_CURRENT_SOURCE_DIR}             PARENT_SCOPE)
