--- a/Libs/nanopb/CMakeLists.txt
+++ b/Libs/nanopb/CMakeLists.txt
@@ -68,3 +68,5 @@ target_include_directories(nanopb
         ${NANOPB_INCLUDE_DIRS}
         ${CMAKE_CURRENT_SOURCE_DIR}
 )
+
+set(PROTOBUF_PROTO_FILE ${CMAKE_CURRENT_SOURCE_DIR}/${PROTOBUF_PROTO_FILE} PARENT_SCOPE)
