--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,7 @@ endif()
 
 add_subdirectory(Libs)
 add_subdirectory(src)
+add_subdirectory(tests)
 
 ###############################################################################
 
