--- a/Libs/nanopb/CMakeLists.txt
+++ b/Libs/nanopb/CMakeLists.txt
@@ -35,6 +35,8 @@ set(NANOPB_DIST             ${CMAKE_CURRENT_SOURCE_DIR}/nanopb-dist)
 
 set(CMAKE_MODULE_PATH       ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}")
 
+set(NANOPB_SRC_ROOT_FOLDER  ${NANOPB_DIST})
+
 set(NANOPB_GENERATE_CPP_APPEND_PATH FALSE)
 
 find_package(Nanopb REQUIRED)
