update to hid interface build + runs

--- a/Libs/CMakeLists.txt
+++ b/Libs/CMakeLists.txt
@@ -82,7 +82,7 @@ SET(HAL_SRC
 #    ${HAL_BASE_SRC_DIR}/${STM32_FAMILY_LONG_lx}_ll_spi.c
 #    ${HAL_BASE_SRC_DIR}/${STM32_FAMILY_LONG_lx}_ll_tim.c
 #    ${HAL_BASE_SRC_DIR}/${STM32_FAMILY_LONG_lx}_ll_usart.c
-##    ${HAL_BASE_SRC_DIR}/${STM32_FAMILY_LONG_lx}_ll_usb.c
+    ${HAL_BASE_SRC_DIR}/${STM32_FAMILY_LONG_lx}_ll_usb.c
 #    ${HAL_BASE_SRC_DIR}/${STM32_FAMILY_LONG_lx}_ll_utils.c
 
     ${CMAKE_CURRENT_SOURCE_DIR}/STM32/system_${STM32_FAMILY_LONG_lx}.c
@@ -117,7 +117,7 @@ target_compile_definitions(HAL PUBLIC
 
 set(USB_BASE_DIR ${STM32Cube}/Middlewares/ST/STM32_USB_Device_Library)
 set(USB_CORE_DIR ${USB_BASE_DIR}/Core)
-set(USB_CRC_ACM_DIR ${USB_BASE_DIR}/Class/CDC)
+set(USB_CUSTOM_HID_DIR ${USB_BASE_DIR}/Class/CustomHID)
 
 set(USB_SRC
     # ${USB_CORE_DIR}/Src/usbd_conf_template.c
@@ -126,13 +126,13 @@ set(USB_SRC
     # ${USB_CORE_DIR}/Src/usbd_desc_template.c
     ${USB_CORE_DIR}/Src/usbd_ioreq.c
 
-    ${USB_CRC_ACM_DIR}/Src/usbd_cdc.c
+    ${USB_CUSTOM_HID_DIR}/Src/usbd_customhid.c
 )
 
 ADD_LIBRARY(USB STATIC ${USB_SRC})
 target_include_directories(USB PUBLIC
     ${USB_CORE_DIR}/Inc
-    ${USB_CRC_ACM_DIR}/Inc
+    ${USB_CUSTOM_HID_DIR}/Inc
 )
 
 target_link_libraries(USB PUBLIC
