--- a/Libs/CMakeLists.txt
+++ b/Libs/CMakeLists.txt
@@ -150,5 +150,11 @@ target_include_directories(result INTERFACE result)
 add_subdirectory(nanopb)
 set(PROTOBUF_PROTO_FILE ${PROTOBUF_PROTO_FILE} PARENT_SCOPE)
 
+###################
+# opencm3
+###################
+
+
+
 
 SET(LIBS_DIR            ${CMAKE_CURRENT_SOURCE_DIR}             PARENT_SCOPE)
